--- a/styles/chaptersel.css
+++ b/styles/chaptersel.css
@@ -11,3 +11,16 @@ body {
 #stressLevel {
     color: yellowgreen;
 }
+
+.infoSticker {
+    width: 300px;
+    height: 300px;
+    background-image: url(../styles/images/evilphone.png);
+    transition: background-image 0.5s ease-in-out;  
+
+}
+
+.infoSticker:hover {
+    background-image: url(../styles/images/testfact.png);
+    
+}
