--- a/styles/chaptersel.css
+++ b/styles/chaptersel.css
@@ -12,6 +12,8 @@ body {
     color: yellowgreen;
 }
 
+/*basic hover functionality
+User hovers or clicks, can recieve info on a decision*/
 .infoSticker {
     width: 300px;
     height: 300px;
