implementation of decision maker (needs further styling)

--- a/styles/chapters.css
+++ b/styles/chapters.css
@@ -4,6 +4,44 @@ font-weight: 400;
 font-style: normal;
 */
 
+/*Instead of hamburger menu, visual novel esque decision
+maker. options displayed in a column, activated on hover of
+an image, all contained within choiceContainer.*/
+.choiceContainer {
+    position: relative;
+
+    img {
+        position: absolute;
+        width: 200px;
+        height: auto;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        -ms-transform: translate(-50%, -50%);
+    }
+
+}
+
+/*Use display: none so that the choices don't render
+until the user is actively looking for them*/
+.choiceContent {
+    display: none;
+    position: absolute;
+    top: 70%;
+    left: 30%;
+    background-color: rgb(222, 237, 251);
+    border: 3px;
+    border-color: rgb(154, 192, 227);
+}
+
+/*display choices in a column for easy readability*/
+.choiceContainer:hover .choiceContent {
+    display: block;
+    display: flex;
+    flex-direction: column;
+}
+
+
 /*Layout for smaller devices*/
 @media (max-width: 450px) {
 
